# qemu-fw-cfg-rs

./: Cargo.toml  LICENSE-MIT  README.md  i686-unknown-none.json
.cargo/: config
.github/workflows/: build.yml  ci.yml
src/: lib.rs  x86.rs
tests/: input.txt  main.rs  no_dma.rs  runner.sh
tests/shared/: mod.rs
tests/shared/i686/: boot.asm  link.ld  mod.rs
tests/shared/riscv32/: memory.x  mod.rs
